[package]
name = "a3s-event"
version = "0.2.0"
edition = "2021"
authors = ["A3S Lab"]
license = "MIT"
description = "Pluggable event subscription, dispatch, and persistence for the A3S ecosystem"
repository = "https://github.com/A3S-Lab/Event"
documentation = "https://docs.rs/a3s-event"
readme = "README.md"
keywords = ["event", "pubsub", "provider", "persistence", "async"]
categories = ["asynchronous", "network-programming"]

[lib]
name = "a3s_event"
path = "src/lib.rs"

[features]
default = ["nats", "encryption", "cloudevents", "routing"]
nats = ["dep:async-nats", "dep:time"]
encryption = ["dep:aes-gcm", "dep:base64"]
cloudevents = ["dep:chrono"]
routing = []
full = ["nats", "encryption", "cloudevents", "routing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-stream = "0.1"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
futures = "0.3"

# Optional: NATS JetStream provider
async-nats = { version = "0.38", optional = true }
time = { version = "0.3", optional = true }

# Optional: AES-256-GCM payload encryption
aes-gcm = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }

# Optional: CloudEvents v1.0 conversion
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "publish"
harness = false
